syntax = "proto3";

package com.pm.proto;

option java_package = "com.pm.proto";
option java_outer_classname = "StatsProto";

message StatsRequest {
  string id = 1;
}

message StatsResponse {
  string id = 1;
  int64 clicks = 2;
  double spentAmount = 3;
}

service StatsService {
  rpc GetStatsById(StatsRequest) returns (StatsResponse);
  rpc CreateStats(StatsRequest) returns (StatsResponse);
  rpc RegisterClick(StatsRequest) returns (StatsResponse);
  rpc DeleteStats(StatsRequest) returns (StatsResponse);
}